deployment-multitool copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: multitool
  name: multitool
spec:
  replicas: 3
  selector:
    matchLabels:
      app: multitool
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: multitool
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - multitool
                topologyKey: "kubernetes.io/hostname"
      containers:
        - image: praqma/network-multitool
          name: network-multitool
          resources: {}
status: {}
